can post and retrieve notes successfully. tried adding search function in list_fragment, but it's garbage boiler-plate code and doesn't work.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -59,7 +59,7 @@
             app:destination="@id/editFragment" />
         <argument
             android:name="note"
-            app:argType="com.example.notizen.data.model.Note" />
+            app:argType="com.example.notizen.model.data.Note"/>
 <!--        <argument-->
 <!--            android:name="currentRecipe"-->
 <!--            app:argType="com.example.notizen.data.model.Recipe" />-->
@@ -74,7 +74,7 @@
             app:destination="@id/listFragment" />
         <argument
             android:name="note"
-            app:argType="com.example.notizen.data.model.Note" />
+            app:argType="com.example.notizen.model.data.Note" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
