added feature for compose fragment that checks if user is in sync with server before adding note to DB

--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -25,6 +25,7 @@
         android:clickable="true"
         android:focusable="true"
         android:tint="@color/black"
+        android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
