--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,7 @@
         android:id="@+id/loginFragment"
         android:name="com.example.notizen.ui.fragments.LoginFragment"
         android:label="Login"
-        tools:layout="@layout/fragment_login" >
+        tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_listFragment"
             app:destination="@id/listFragment" />
@@ -20,7 +20,7 @@
         android:id="@+id/registerFragment"
         android:name="com.example.notizen.ui.fragments.RegisterFragment"
         android:label="Register"
-        tools:layout="@layout/fragment_register" >
+        tools:layout="@layout/fragment_register">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
@@ -29,7 +29,7 @@
         android:id="@+id/listFragment"
         android:name="com.example.notizen.ui.fragments.ListFragment"
         android:label="List"
-        tools:layout="@layout/fragment_list" >
+        tools:layout="@layout/fragment_list">
         <action
             android:id="@+id/action_listFragment_to_detailFragment"
             app:destination="@id/detailFragment" />
@@ -44,31 +44,34 @@
         android:id="@+id/composeFragment"
         android:name="com.example.notizen.ui.fragments.ComposeFragment"
         android:label="Compose"
-        tools:layout="@layout/fragment_compose" >
-            <action
-                android:id="@+id/action_composeFragment_to_listFragment"
-                app:destination="@id/listFragment" />
+        tools:layout="@layout/fragment_compose">
+        <action
+            android:id="@+id/action_composeFragment_to_listFragment"
+            app:destination="@id/listFragment" />
+        <argument
+            android:name="note"
+            app:argType="com.example.notizen.model.data.Note" />
     </fragment>
     <fragment
         android:id="@+id/detailFragment"
         android:name="com.example.notizen.ui.fragments.DetailFragment"
         android:label="Detail"
-        tools:layout="@layout/fragment_detail" >
+        tools:layout="@layout/fragment_detail">
         <action
             android:id="@+id/action_detailFragment_to_editFragment"
             app:destination="@id/editFragment" />
         <argument
             android:name="note"
-            app:argType="com.example.notizen.model.data.Note"/>
-<!--        <argument-->
-<!--            android:name="currentRecipe"-->
-<!--            app:argType="com.example.notizen.data.model.Recipe" />-->
+            app:argType="com.example.notizen.model.data.Note" />
+        <!--        <argument-->
+        <!--            android:name="currentRecipe"-->
+        <!--            app:argType="com.example.notizen.data.model.Recipe" />-->
     </fragment>
     <fragment
         android:id="@+id/editFragment"
         android:name="com.example.notizen.ui.fragments.EditFragment"
         android:label="Edit"
-        tools:layout="@layout/fragment_edit" >
+        tools:layout="@layout/fragment_edit">
         <action
             android:id="@+id/action_editFragment_to_listFragment"
             app:destination="@id/listFragment" />
@@ -80,7 +83,7 @@
         android:id="@+id/profileFragment"
         android:name="com.example.notizen.ui.fragments.ProfileFragment"
         android:label="Profile"
-        tools:layout="@layout/fragment_profile" >
+        tools:layout="@layout/fragment_profile">
         <!--        <action-->
         <!--            android:id="@+id/action_editFragment_to_listFragment"-->
         <!--            app:destination="@id/listFragment" />-->
