--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -2,11 +2,11 @@
 <menu xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/item_home"
+        android:id="@+id/listFragment"
         android:icon="@drawable/ic_home"
         tools:ignore="MenuTitle" />
     <item
-        android:id="@+id/item_profile"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         tools:ignore="MenuTitle" />
 </menu>
